# rust-collection-macros

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  tests.rs
src/maps/: btreemap.rs  hashmap.rs  mod.rs
src/sets/: btreeset.rs  hashset.rs  mod.rs
