[package]
name = "simple-collection-macros"
version = "0.1.1"
edition = "2021"
authors = ["Samuel Boyden <s.boyden@authentura.com>"]
license-file = "LICENSE.md"
description = "Simple and configurable macros for maps and sets."
repository = "https://github.com/Authentura/rust-collection-macros"
homepage = "https://github.com/Authentura/rust-collection-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.4", optional = true }
thincollections = { version = "0.5", optional = true }

[features]
default = ["map-macro-use-hmap", "set-macro-use-hset"]
dashmap = ["dep:dashmap"]
thincollections = ["dep:thincollections"]

map-macro-use-hmap = []
map-macro-use-bmap = []
set-macro-use-hset = []
set-macro-use-bset = []
